Updates
Added a spring style properties class.
Added checked exceptions for various error conditions.
Moved path construction to another class, BatchPathProvider.
Moved the FileSystem related classes to their own package.
Replaced use of the Stream<StagedFiles> and unchecked exception with the FileitemIterator.
