# staging-service-contract/src/main/resources/com/github/cafdataprocessing/services/staging/contract/swagger.yaml
@@ -118,10 +118,6 @@ paths:
             invalid.
         "500":
           description: The request failed due to an unexpected server error.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/BatchError"
     delete:
       tags:
         - Staging
@@ -134,11 +130,6 @@ paths:
           description: The batch does not exist.
         "500":
           description: The request failed due to an unexpected server error.
-          content:
-            "*/*":
-              schema:
-                $ref: "#/components/schemas/BatchError"
-
 components:
   schemas:
     StatusResponse:
@@ -146,7 +137,7 @@ components:
       description: Status of the service
       type: object
       properties:
-        messgae:
+        message:
           type: string
           description: Detailed status message
     BatchResponse:
@@ -160,15 +151,6 @@ components:
           items:
             type: string
             description: Details of documents that were staged
-    BatchError:
-      title: BatchError
-      properties:
-        code:
-          type: string
-          description: An error code
-        messgae:
-          type: string
-          description: Detailed error message
     BatchList:
       title: BatchList
       description: A list of batches identifiers ordered alphabetically
